--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -49,7 +49,7 @@
             android:textSize="16sp"
             android:textStyle="bold"
             android:textAlignment="center"
-            android:text="@string/loginTvCorreo"
+            android:text="@string/registerTvName"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toTopOf="@id/registerTilUsername"
@@ -89,7 +89,7 @@
             android:textSize="16sp"
             android:textStyle="bold"
             android:textAlignment="center"
-            android:text="@string/loginTvCorreo"
+            android:text="@string/registerTvCorreo"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/registerTilUsername"
             app:layout_constraintBottom_toTopOf="@id/registerTilEmail"
@@ -128,7 +128,7 @@
             android:textSize="16sp"
             android:textStyle="bold"
             android:textAlignment="center"
-            android:text="@string/loginTvCorreo"
+            android:text="@string/registerTvContra"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/registerTilEmail"
             app:layout_constraintBottom_toTopOf="@id/registerTilPassword"
@@ -167,7 +167,7 @@
             android:textSize="16sp"
             android:textStyle="bold"
             android:textAlignment="center"
-            android:text="@string/loginTvCorreo"
+            android:text="@string/registerTvContraValue"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/registerTilPassword"
             app:layout_constraintBottom_toTopOf="@id/registerTilConfirmPassword"
